--- a/style/main.css
+++ b/style/main.css
@@ -59,7 +59,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background-color: purple !important;
+  background-color: rgb(32, 32, 32) !important;
 }
 
 /*# sourceMappingURL=main.css.map */
