--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,1 +1,12 @@
 //header
+
+.notion-header__cover.has-cover {
+    position: absolute !important;
+    width: 100% !important;
+    top: 0 !important;
+    margin-top: -20px !important;
+    height: 60vh !important;
+    max-height: 60vh !important;
+    z-index: -2 !important;
+    opacity: .5 !important;
+}
