--- a/style/main.css
+++ b/style/main.css
@@ -58,6 +58,17 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate !important;
 }
 
+.notion-header__cover.has-cover {
+  position: absolute !important;
+  width: 100% !important;
+  top: 0 !important;
+  margin-top: -20px !important;
+  height: 60vh !important;
+  max-height: 60vh !important;
+  z-index: -2 !important;
+  opacity: 0.5 !important;
+}
+
 body {
   background-color: rgb(32, 32, 32) !important;
 }
