--- a/style/main.css
+++ b/style/main.css
@@ -71,6 +71,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 body {
   background-color: rgb(32, 32, 32) !important;
+  position: relative !important;
 }
 
 /*# sourceMappingURL=main.css.map */
