--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,21 @@
+.dark-theme body {
+  --bg-default: rgb(32, 32, 32) !important;
+  --theme-gradient: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 98%) !important;
+  --text-default: rgb(237, 237, 237) !important;
+  --hover-default: rgb(142, 230, 192) !important;
+  --btn-bg: rgb(237, 237, 237) !important;
+  --btn-text: rgb(32, 32, 32) !important;
+}
+
+.light-theme body {
+  --bg-default: rgb(237, 237, 237) !important;
+  --theme-gradient: linear-gradient(to bottom, rgba(246, 244, 244, 0), rgba(246, 244, 244, 1) 98%)!important;
+  --text-default: rgb(32, 32, 32) !important;
+  --hover-default: rgb(101, 184, 148) !important;
+  --btn-bg: rgb(32, 32, 32) !important;
+  --btn-text: rgb(237, 237, 237) !important;
+}
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
@@ -70,7 +88,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background-color: rgb(32, 32, 32) !important;
+  background-color: var(--bg-default) !important;
   position: relative !important;
 }
 
