--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 @forward 'pages/home';
 
 body{
-    background-color: var(--bg-default) !important;
+    background-color: var(--color-bg-default) !important;
     position: relative !important;
 }
 
