theme switch add

--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,1 +1,8 @@
 //navigation
+.theme-switch{
+    width: 22px !important;
+    height: 22px !important;
+    transition: all .3s ease-in-out !important;
+    margin-right: 25px !important;
+    margin-left: -10px !important;
+}
