--- a/style/main.css
+++ b/style/main.css
@@ -87,6 +87,14 @@ p, h1, h2, h3, h4, h5, h6 {
   opacity: 0.5 !important;
 }
 
+.theme-switch {
+  width: 22px !important;
+  height: 22px !important;
+  transition: all 0.3s ease-in-out !important;
+  margin-right: 25px !important;
+  margin-left: -10px !important;
+}
+
 body {
   background-color: var(--color-bg-default) !important;
   position: relative !important;
