notion header and cover

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,3 +10,18 @@
     z-index: -2 !important;
     opacity: .5 !important;
 }
+
+.notion-header__cover.no-cover {
+    display: none!important;
+}
+
+.notion-header__cover:after, .footer-cover:before {
+    content: ""!important;
+    position: absolute!important;
+    z-index: 1!important;
+    bottom: -2px!important;
+    left: 0!important;
+    background-image: var(--theme-gradient)!important;
+    width: 100%!important;
+    height: 100%!important;
+}
