--- a/style/main.css
+++ b/style/main.css
@@ -87,6 +87,21 @@ p, h1, h2, h3, h4, h5, h6 {
   opacity: 0.5 !important;
 }
 
+.notion-header__cover.no-cover {
+  display: none !important;
+}
+
+.notion-header__cover:after, .footer-cover:before {
+  content: "" !important;
+  position: absolute !important;
+  z-index: 1 !important;
+  bottom: -2px !important;
+  left: 0 !important;
+  background-image: var(--theme-gradient) !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .theme-switch {
   width: 22px !important;
   height: 22px !important;
