--- a/style/main.css
+++ b/style/main.css
@@ -110,4 +110,12 @@ p, h1, h2, h3, h4, h5, h6 {
   margin-left: -10px !important;
 }
 
+.theme-blackout .dark-mode-icon {
+  display: none !important;
+}
+
+.theme-blackout .light-mode-icon {
+  display: flex !important;
+}
+
 /*# sourceMappingURL=main.css.map */
