--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,4 +1,12 @@
 //navigation
+.super-navbar{
+    width: calc(100% - 193px) !important;
+    height: 65px !important;
+    margin: 20px auto !important;
+    padding: 0px 60px !important;
+    transition: box-shadow .2s ease-in-out !important;
+}
+
 .theme-switch{
     width: 22px !important;
     height: 22px !important;
