--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,9 +8,11 @@
   /*
     2. Remove default margin
   */
+  /*
   * {
     margin: 0 !important;
-  }
+  }*/
+  
   /*
     3. Allow percentage-based heights in the application
   */
