--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -5,6 +5,8 @@
     margin: 20px auto !important;
     padding: 0px 60px !important;
     transition: box-shadow .2s ease-in-out !important;
+    background: var(--color-bg-glass-default) !important;
+    backdrop-filter: blur(10px)!important;
 }
 
 .theme-switch{
@@ -21,4 +23,12 @@
 
 .theme-blackout .light-mode-icon{
     display: flex !important;
+}
+
+.theme-default .dark-mode-icon{
+    display: flex !important;
+}
+
+.theme-default .light-mode-icon{
+    display: none !important;
 }
