--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -2,6 +2,7 @@
 .theme-blackout body{
     --color-bg-default: rgb(32, 32, 32) !important;
     --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
+    --color-bg-glass-default: rgb(255, 255, 255/3%) !important
     --color-text-default: rgb(237, 237, 237) !important;
     --color-hover-default: rgb(142, 230, 192) !important;
     --color-cta-background: rgb(237, 237, 237) !important;
