--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
+  --color-bg-glass-default: rgb(255, 255, 255/3%) !important
   --color-text-default: rgb(237, 237, 237) !important;
   --color-hover-default: rgb(142, 230, 192) !important;
   --color-cta-background: rgb(237, 237, 237) !important;
@@ -112,6 +113,8 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 20px auto !important;
   padding: 0px 60px !important;
   transition: box-shadow 0.2s ease-in-out !important;
+  background: var(--color-bg-glass-default) !important;
+  backdrop-filter: blur(10px) !important;
 }
 
 .theme-switch {
@@ -128,6 +131,14 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .theme-blackout .light-mode-icon {
   display: flex !important;
+}
+
+.theme-default .dark-mode-icon {
+  display: flex !important;
+}
+
+.theme-default .light-mode-icon {
+  display: none !important;
 }
 
 .super-content.max-width {
