remove border from table

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,3 +7,12 @@
 .max-width{
     max-width: 1280px !important;
 }
+
+//table
+.notion-collection-table{
+    border-top: none !important;
+}
+
+.notion-collection-table th{
+    border: none !important;
+}
