remove cell titles

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,3 +16,7 @@
 .notion-collection-table th{
     border: none !important;
 }
+
+.notion-collection-table__head-cell{
+    display: none !important;
+}
