--- a/style/main.css
+++ b/style/main.css
@@ -157,4 +157,8 @@ p, h1, h2, h3, h4, h5, h6 {
   border: none !important;
 }
 
+.notion-collection-table__head-cell {
+  display: none !important;
+}
+
 /*# sourceMappingURL=main.css.map */
