--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
-  --color-bg-glass-default: rgb(255, 255, 255/3%) !important
+  --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
   --color-text-default: rgb(237, 237, 237) !important;
   --color-hover-default: rgb(142, 230, 192) !important;
   --color-cta-background: rgb(237, 237, 237) !important;
@@ -11,6 +11,7 @@
 .theme-default body {
   --color-bg-default: rgb(237, 237, 237) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
+  --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
   --color-text-default: rgb(32, 32, 32) !important;
   --color-hover-default: rgb(101, 184, 148) !important;
   --color-cta-background: rgb(32, 32, 32) !important;
@@ -113,7 +114,7 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 20px auto !important;
   padding: 0px 60px !important;
   transition: box-shadow 0.2s ease-in-out !important;
-  background: var(--color-bg-glass-default) !important;
+  background: var(--color-bg-transparent-default) !important;
   backdrop-filter: blur(10px) !important;
 }
 
