--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500&display=swap");
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
@@ -76,6 +77,15 @@ p, h1, h2, h3, h4, h5, h6 {
 */
 #root, #__next {
   isolation: isolate !important;
+}
+
+body {
+  font-family: "Lexend", sans-serif !important;
+}
+
+h1.notion-heading {
+  font-size: 8rem !important;
+  font-weight: 500 !important;
 }
 
 .notion-header__cover.has-cover {
