--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,11 @@
 //typography rules
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500&display=swap');
 
-body{
+h1, h2, h3, h4, h5, h6{
     font-family: 'Lexend', sans-serif !important;
 }
 
 h1.notion-heading{
-    font-size: 8rem !important;
+    font-size: 5rem !important;
     font-weight: 500 !important;
 }
