--- a/style/main.css
+++ b/style/main.css
@@ -79,13 +79,34 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate !important;
 }
 
+:root {
+  --font-size-1: 1.25rem;
+  --font-size-2: 1.5rem;
+  --font-size-3: 2rem;
+  --font-size-4: 2.5rem;
+  --font-size-5: 3rem;
+  --font-size-6: 3.5rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Lexend", sans-serif !important;
 }
 
 h1.notion-heading {
-  font-size: 5rem !important;
+  font-size: var(--font-size-6) !important;
   font-weight: 500 !important;
+}
+
+h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
+  font-weight: 300 !important;
+}
+
+h2.notion-heading {
+  font-size: var(--font-size-4) !important;
+}
+
+h3.notion-heading {
+  font-size: var(--font-size-2) !important;
 }
 
 .notion-header__cover.has-cover {
