table-hosted section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,6 +17,11 @@
     border: none !important;
 }
 
+.notion-collection-table td{
+    border: none !important;
+    display: table !important;
+}
+
 .notion-collection-table__head-cell{
     display: none !important;
 }
