--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,6 +13,11 @@
     border-top: none !important;
 }
 
+.notion-collection-table__wrapper{
+    max-width: 500px !important;
+    margin: 0 auto !important;
+}
+
 .notion-collection-table th{
     border: none !important;
 }
