--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,6 +9,10 @@
 }
 
 //table
+thead.notion-collection-table__head{
+    border: none !important;
+}
+
 .notion-collection-table{
     border-top: none !important;
 }
