--- a/style/main.css
+++ b/style/main.css
@@ -180,6 +180,10 @@ h3.notion-heading {
   max-width: 1280px !important;
 }
 
+thead.notion-collection-table__head {
+  border: none !important;
+}
+
 .notion-collection-table {
   border-top: none !important;
 }
