--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,6 +13,13 @@ thead.notion-collection-table__head{
     border: none !important;
 }
 
+tbody.notion-collection-table__body{
+    display: flex !important;
+    flex-direction: row !important;
+    gap: 2rem !important;
+
+}
+
 .notion-collection-table{
     border-top: none !important;
 }
@@ -24,7 +31,8 @@ thead.notion-collection-table__head{
 }
 
 .notion-collection-table tr{
-    display: table-cell !important;
+    /*display: table-cell !important;*/
+    flex-basis: 100% !important;
     border-collapse: inherit !important;
     border: 1px solid white !important;
     border-spacing: 10px !important;
