--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,7 +21,12 @@ tbody.notion-collection-table__body{
 }
 
 .notion-collection-table{
+    display: flex !important;
+    justify-content: center !important;
+    table-layout: unset !important;
+
     border-top: none !important;
+    border-collapse: unset !important;
 }
 
 .notion-collection-table__wrapper{
@@ -33,6 +38,8 @@ tbody.notion-collection-table__body{
 .notion-collection-table tr{
     /*display: table-cell !important;*/
     flex-basis: 100% !important;
+    width: 20% !important;
+    padding: 2rem !important;
     border-collapse: inherit !important;
     border: 1px solid white !important;
     border-spacing: 10px !important;
@@ -49,4 +56,9 @@ tbody.notion-collection-table__body{
 
 .notion-collection-table__head-cell{
     display: none !important;
+}
+
+.notion-collection-table__cell .notion-semantic-string{
+    white-space: inherit !important;
+    overflow: inherit !important;
 }
