header table center

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,6 +9,10 @@
 }
 
 //table
+.notion-collection__header{
+    margin: 0 auto !important;
+}
+
 thead.notion-collection-table__head{
     border: none !important;
 }
