--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -43,7 +43,7 @@ tbody.notion-collection-table__body{
     width: 20% !important;
     padding: 2rem !important;
     border-collapse: inherit !important;
-    border: 1px solid white !important;
+    box-shadow: 1px 0 0 0 var(--color-border-default) !important;
     border-spacing: 10px !important;
 }
 
