--- a/style/main.css
+++ b/style/main.css
@@ -2,6 +2,7 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
+  --color-border-default: hsla(0,0%,100%,.1) !important;
   --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
   --color-text-default: rgb(237, 237, 237) !important;
   --color-hover-default: rgb(142, 230, 192) !important;
@@ -12,6 +13,7 @@
 .theme-default body {
   --color-bg-default: rgb(237, 237, 237) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
+  --color-border-default: hsla(0,0%,100%,.1) !important;
   --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
   --color-text-default: rgb(32, 32, 32) !important;
   --color-hover-default: rgb(101, 184, 148) !important;
@@ -212,7 +214,7 @@ tbody.notion-collection-table__body {
   width: 20% !important;
   padding: 2rem !important;
   border-collapse: inherit !important;
-  border: 1px solid white !important;
+  box-shadow: 1px 0 0 0 var(--color-border-default) !important;
   border-spacing: 10px !important;
 }
 
