--- a/style/main.css
+++ b/style/main.css
@@ -214,7 +214,8 @@ tbody.notion-collection-table__body {
   width: 20% !important;
   padding: 2rem !important;
   border-collapse: inherit !important;
-  box-shadow: 1px var(--color-border-default) !important;
+  box-shadow: 1px 0 0 0 var(--color-border-default) !important;
+  border: 1px solid !important;
   border-spacing: 10px !important;
 }
 
