--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -52,7 +52,7 @@ tbody.notion-collection-table__body{
 
 .notion-collection-table td{
     border: none !important;
-    display: table !important;
+    display: flex !important;
 }
 
 .notion-collection-table__head-cell{
