--- a/style/main.css
+++ b/style/main.css
@@ -241,4 +241,12 @@ tbody.notion-collection-table__body {
   overflow: inherit !important;
 }
 
+.notion-collection-table__cell .file {
+  width: 150px !important;
+  height: 150px !important;
+}
+.notion-collection-table__cell .file img {
+  border-radius: 5px !important;
+}
+
 /*# sourceMappingURL=main.css.map */
