--- a/style/main.css
+++ b/style/main.css
@@ -97,6 +97,8 @@ h1, h2, h3, h4, h5, h6 {
 h1.notion-heading {
   font-size: var(--font-size-6) !important;
   font-weight: 500 !important;
+  line-height: 1em !important;
+  padding-bottom: 1rem !important;
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
