--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -83,3 +83,8 @@ tbody.notion-collection-table__body{
     width: 150px !important;
     height: 150px !important;
 }
+
+element.style{
+    width: 150px !important;
+    height: 150px !important;
+}
