--- a/style/main.css
+++ b/style/main.css
@@ -256,4 +256,9 @@ tbody.notion-collection-table__body {
   height: 150px !important;
 }
 
+element.style {
+  width: 150px !important;
+  height: 150px !important;
+}
+
 /*# sourceMappingURL=main.css.map */
