--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -6,6 +6,7 @@
     padding: 0px 60px !important;
     transition: box-shadow .2s ease-in-out !important;
     background: var(--color-bg-transparent-default) !important;
+    color: var(--color-text-default) !important;
 }
 
 .theme-switch{
