--- a/style/main.css
+++ b/style/main.css
@@ -254,7 +254,7 @@ tbody.notion-collection-table__body {
   border-radius: 5px !important;
 }
 
-.notion-property .notion-property__file a > div {
+.notion-property.notion-property__file.property-63756178 a div {
   width: 150px !important;
   height: 150px !important;
 }
