--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -81,7 +81,7 @@ tbody.notion-collection-table__body{
     }
 }
 
-.notion-property .notion-property__file a > div{
+.notion-property.notion-property__file.property-63756178 a div{
     width: 150px !important;
     height: 150px !important;
 }
