text transform header

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,6 +8,12 @@
     max-width: 1280px !important;
 }
 
+.notion-collection__header{
+    text-transform: uppercase !important;
+    margin-top: 3rem !important;
+    margin-bottom: 2rem !important;
+}
+
 //table
 .notion-collection__header{
     margin: 0 auto !important;
