hosted by section

--- a/style/main.css
+++ b/style/main.css
@@ -265,9 +265,9 @@ tbody.notion-collection-table__body {
   height: 150px !important;
 }
 
-element.style {
-  width: 150px !important;
-  height: 150px !important;
+.notion-property.notion-property__file.property-63756178 a div picture img {
+  max-height: inherit !important;
+  border-radius: 5px !important;
 }
 
 /*# sourceMappingURL=main.css.map */
