--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -92,7 +92,7 @@ tbody.notion-collection-table__body{
     height: 150px !important;
 }
 
-element.style{
-    width: 150px !important;
-    height: 150px !important;
+.notion-property.notion-property__file.property-63756178 a div picture img{
+    max-height: inherit !important;
+    border-radius: 5px !important;
 }
