--- a/style/main.css
+++ b/style/main.css
@@ -252,17 +252,11 @@ tbody.notion-collection-table__body {
   overflow: inherit !important;
 }
 
-.notion-collection-table__cell .file {
-  width: 150px !important;
-  height: 150px !important;
-}
-.notion-collection-table__cell .file img {
-  border-radius: 5px !important;
-}
-
 .notion-property.notion-property__file.property-63756178 a div {
   width: 150px !important;
   height: 150px !important;
+}
+.notion-property.notion-property__file.property-63756178 a div img {
   border-radius: 5px !important;
 }
 
