--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,16 +8,17 @@
     max-width: 1280px !important;
 }
 
-.notion-collection__header{
-    text-transform: uppercase !important;
+.notion-collection-table__header-wrapper{
+    justify-content: center !important;
     margin-top: 3rem !important;
     margin-bottom: 2rem !important;
 }
 
-//table
 .notion-collection__header{
-    margin: 0 auto !important;
+    text-transform: uppercase !important;
 }
+
+//table
 
 thead.notion-collection-table__head{
     border: none !important;
