--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,6 +12,7 @@
     justify-content: center !important;
     margin-top: 3rem !important;
     margin-bottom: 2rem !important;
+    padding: 2px;
 }
 
 .notion-collection__header{
