--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -89,6 +89,11 @@ tbody.notion-collection-table__body{
 }
 
 //Medium gallery
+.notion-collection-gallery.medium{
+    display: flex !important;
+    flex-direction: column !important;
+}
+
 .notion-collection-card{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
@@ -105,5 +110,7 @@ tbody.notion-collection-table__body{
 
 .notion-collection-card__content.no-title{
     display: none !important;
+}
+.notion-collection-card__content{
     flex: 1 1 0% !important;
 }
