--- a/style/main.css
+++ b/style/main.css
@@ -261,6 +261,11 @@ tbody.notion-collection-table__body {
   border-radius: 5px !important;
 }
 
+.notion-collection-gallery.medium {
+  display: flex !important;
+  flex-direction: column !important;
+}
+
 .notion-collection-card {
   display: flex !important;
   border: 1px solid var(--color-border-default) !important;
@@ -278,6 +283,9 @@ tbody.notion-collection-table__body {
 
 .notion-collection-card__content.no-title {
   display: none !important;
+}
+
+.notion-collection-card__content {
   flex: 1 1 0% !important;
 }
 
