--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -98,6 +98,7 @@ tbody.notion-collection-table__body{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
     padding: 2rem !important;
+    background: none !important;
 }
 .notion-collection-card__cover{
     border-radius: 5px !important;
