--- a/style/main.css
+++ b/style/main.css
@@ -270,6 +270,7 @@ tbody.notion-collection-table__body {
   display: flex !important;
   border: 1px solid var(--color-border-default) !important;
   padding: 2rem !important;
+  background: none !important;
 }
 
 .notion-collection-card__cover {
