--- a/style/main.css
+++ b/style/main.css
@@ -224,7 +224,7 @@ tbody.notion-collection-table__body {
   width: 20% !important;
   padding: 2rem !important;
   border-collapse: inherit !important;
-  box-shadow: 0 0 0 1px var(--color-border-default) !important;
+  box-shadow: 1px solid var(--color-border-default) !important;
 }
 
 .notion-collection-table th {
