--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -112,3 +112,8 @@ tbody.notion-collection-table__body{
 .notion-collection-card__content{
     flex: 1 1 0% !important;
 }
+
+.notion-collection-card__property:nth-child(1){
+    font-size: var(--font-size-2) !important;
+    font-weight: 300 !important;
+}
