--- a/style/main.css
+++ b/style/main.css
@@ -286,4 +286,9 @@ tbody.notion-collection-table__body {
   flex: 1 1 0% !important;
 }
 
+.notion-collection-card__property:nth-child(1) {
+  font-size: var(--font-size-2) !important;
+  font-weight: 300 !important;
+}
+
 /*# sourceMappingURL=main.css.map */
