--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,11 +8,10 @@
     max-width: 1280px !important;
 }
 
-.notion-collection-table__header-wrapper{
+.notion-collection__header-wrapper{
     justify-content: center !important;
     margin-top: 3rem !important;
     margin-bottom: 2rem !important;
-    padding: 2px;
 }
 
 .notion-collection__header{
@@ -51,7 +50,7 @@ tbody.notion-collection-table__body{
     width: 20% !important;
     padding: 2rem !important;
     border-collapse: inherit !important;
-    box-shadow: 1px solid var(--color-border-default) !important;
+    border: 1px solid var(--color-border-default) !important;
 }
 
 .notion-collection-table th{
