--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -114,5 +114,11 @@ tbody.notion-collection-table__body{
 
 .notion-collection-card__property:nth-child(1){
     font-size: var(--font-size-2) !important;
-    font-weight: 300 !important;
+    font-weight: 600 !important;
 }
+
+.notion-property__date{
+    font-size: 12px !important;
+    color: orange !important;
+}
+
