--- a/style/main.css
+++ b/style/main.css
@@ -102,7 +102,7 @@ h1.notion-heading {
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
-  font-weight: 300 !important;
+  font-weight: 500 !important;
 }
 
 h2.notion-heading {
@@ -287,7 +287,12 @@ tbody.notion-collection-table__body {
 
 .notion-collection-card__property:nth-child(1) {
   font-size: var(--font-size-2) !important;
-  font-weight: 300 !important;
+  font-weight: 600 !important;
+}
+
+.notion-property__date {
+  font-size: 12px !important;
+  color: orange !important;
 }
 
 /*# sourceMappingURL=main.css.map */
