--- a/style/main.css
+++ b/style/main.css
@@ -303,4 +303,9 @@ tbody.notion-collection-table__body {
   white-space: inherit !important;
 }
 
+.notion-collection-card__property:nth-child(3) {
+  margin: 16px 0 0 !important;
+  font-size: 1rem !important;
+}
+
 /*# sourceMappingURL=main.css.map */
