--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -5,6 +5,7 @@
     --color-border-default: hsla(0,0%,100%,.1) !important;
     --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
     --color-text-default: rgb(237, 237, 237) !important;
+    --color-date-default: rgb(208, 106, 78) !important;
     --color-hover-default: rgb(142, 230, 192) !important;
     --color-cta-background: rgb(237, 237, 237) !important;
     --color-cta-text: rgb(32, 32, 32) !important;
@@ -16,6 +17,7 @@
     --color-border-default: hsla(0,0%,100%,.1) !important;
     --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
     --color-text-default: rgb(32, 32, 32) !important;
+    --color-date-default: rgb(149, 75, 54) !important;
     --color-hover-default: rgb(101, 184, 148) !important;
     --color-cta-background: rgb(32, 32, 32) !important;
     --color-cta-text: rgb(237, 237, 237) !important;
