--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -135,3 +135,14 @@ tbody.notion-collection-table__body{
     font-size: 1rem !important;
 }
 
+.notion-collection-card__property:nth-child(4){
+    font-size: 1rem !important;
+    font-weight: 600;
+    
+}
+//links
+.notion-semantic-string .link{
+    border: none !important;
+    color: var(--color-date-default) !important;
+
+}
