--- a/style/main.css
+++ b/style/main.css
@@ -310,4 +310,14 @@ tbody.notion-collection-table__body {
   font-size: 1rem !important;
 }
 
+.notion-collection-card__property:nth-child(4) {
+  font-size: 1rem !important;
+  font-weight: 600;
+}
+
+.notion-semantic-string .link {
+  border: none !important;
+  color: var(--color-date-default) !important;
+}
+
 /*# sourceMappingURL=main.css.map */
