--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -137,12 +137,14 @@ tbody.notion-collection-table__body{
 
 .notion-collection-card__property:nth-child(4){
     font-size: 1rem !important;
-    font-weight: 600;
-    
+    font-weight: 600 !important;
+    margin: 16px 0 0 !important;
+
 }
 //links
 .notion-semantic-string .link{
     border: none !important;
-    color: var(--color-date-default) !important;
+    opacity: .5 !important;
+    /* color: var(--color-date-default) !important; */
 
 }
