--- a/style/main.css
+++ b/style/main.css
@@ -312,12 +312,14 @@ tbody.notion-collection-table__body {
 
 .notion-collection-card__property:nth-child(4) {
   font-size: 1rem !important;
-  font-weight: 600;
+  font-weight: 600 !important;
+  margin: 16px 0 0 !important;
 }
 
 .notion-semantic-string .link {
   border: none !important;
-  color: var(--color-date-default) !important;
+  opacity: 0.5 !important;
+  /* color: var(--color-date-default) !important; */
 }
 
 /*# sourceMappingURL=main.css.map */
