--- a/style/main.css
+++ b/style/main.css
@@ -262,6 +262,10 @@ tbody.notion-collection-table__body {
   border-radius: 5px !important;
 }
 
+.notion-collection-gallery {
+  gap: 3rem !important;
+}
+
 .notion-collection-gallery.medium {
   display: flex !important;
   flex-direction: column !important;
