--- a/style/main.css
+++ b/style/main.css
@@ -163,7 +163,12 @@ h3.notion-heading {
   margin-left: -10px !important;
 }
 
-.theme-default .dark-mode-icon svg, .theme-default .super-navbar__button svg {
+.dark-mode-icon svg, .light-mode-icon svg {
+  height: 22px !important;
+  width: 22px !important;
+}
+
+.theme-blackout .light-mode-icon svg, .theme-blackout .super-navbar__button svg {
   fill: var(--color-text-default) !important;
 }
 
@@ -173,6 +178,10 @@ h3.notion-heading {
 
 .theme-blackout .light-mode-icon {
   display: flex !important;
+}
+
+.theme-default .dark-mode-icon svg, .theme-default .super-navbar__button svg {
+  fill: var(--color-text-default) !important;
 }
 
 .theme-default .dark-mode-icon {
