--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -27,7 +27,10 @@
   */
   body {
     line-height: 1.5 !important;
+    position: relative !important;
     -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+    text-rendering: optimizeLegibility !important;
   }
   /*
     6. Improve media defaults
