--- a/style/main.css
+++ b/style/main.css
@@ -51,7 +51,10 @@ html, body {
 */
 body {
   line-height: 1.5 !important;
+  position: relative !important;
   -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
+  text-rendering: optimizeLegibility !important;
 }
 
 /*
