--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -125,7 +125,7 @@ tbody.notion-collection-table__body{
 .notion-property__date{
     font-size: 12px !important;
     span{
-        color: var(--color-date-default) !important;
+        opacity: .5 !important;
     }
 }
 
@@ -149,6 +149,6 @@ tbody.notion-collection-table__body{
 .notion-semantic-string .link{
     border: none !important;
     opacity: .5 !important;
-    /* color: var(--color-date-default) !important; */
+    color: var(--color-date-default) !important;
 
 }
