--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -3,18 +3,25 @@
     width: calc(100% - 193px) !important;
     height: 65px !important;
     margin: 20px auto !important;
-    padding: 0px 60px !important;
+    padding: 0px 0px !important;
     transition: box-shadow .2s ease-in-out !important;
     background: var(--color-bg-transparent-default) !important;
     color: var(--color-text-default) !important;
+}
+.super-navbar__content{
+    padding-left: 0px !important;
+}
+
+.super-navbar__logo{
+    padding: 0px !important;
 }
 
 .theme-switch{
     width: 22px !important;
     height: 22px !important;
     transition: all .3s ease-in-out !important;
-    margin-right: 25px !important;
-    margin-left: -10px !important;
+    /* margin-right: 25px !important;
+    margin-left: -10px !important; */
 }
 
 .dark-mode-icon svg, .light-mode-icon svg{
