--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,7 +27,7 @@
     padding: 10px 5px !important;
     margin: 20px 0px !important;
     font-weight: 600 !important;
-    
+
 }
 
 //table
@@ -136,6 +136,7 @@ tbody.notion-collection-table__body{
 
 .notion-property__date{
     font-size: 12px !important;
+    color: var(--color-date-default) !important;
     span{
         opacity: .5 !important;
     }
@@ -160,8 +161,13 @@ tbody.notion-collection-table__body{
 //links
 .notion-semantic-string .link{
     border: none !important;
-    opacity: .5 !important;
-    color: var(--color-date-default) !important;
+    /* opacity: .5 !important; */
+    color: var(--color-link-default) !important;
 
+    :hover{
+        opacity: 1 !important;
+    }
 }
+
+
 
