--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -124,7 +124,9 @@ tbody.notion-collection-table__body{
 
 .notion-property__date{
     font-size: 12px !important;
-    color: var(--color-date-default) !important;
+    span{
+        color: var(--color-date-default) !important;
+    }
 }
 
 .gallery .notion-collection-card__property .notion-semantic-string{
