--- a/style/main.css
+++ b/style/main.css
@@ -205,6 +205,22 @@ h3.notion-heading {
   display: none !important;
 }
 
+.notion-toggle {
+  border: 1px solid var(--color-border-default) !important;
+  width: 60% !important;
+  text-align: left !important;
+  margin: -0.5px !important;
+  position: relative !important;
+}
+
+.notion-toggle__summary {
+  padding: 25px 70px 25px 0px !important;
+}
+
+.notion-toggle__content {
+  padding: 0px 30px 20px 30px !important;
+}
+
 .super-content.max-width {
   margin: auto !important;
 }
