--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -29,6 +29,11 @@
     padding: 25px 70px 25px 0px !important;
 }
 
+.notion-toggle__trigger_icon{
+    display: none !important;
+    padding-left: 20px !important;
+}
+
 .notion-toggle__content{
     padding: 0px 30px 20px 30px !important;
 }
