--- a/style/main.css
+++ b/style/main.css
@@ -235,6 +235,11 @@ h3.notion-heading {
   padding: 25px 70px 25px 0px !important;
 }
 
+.notion-toggle__trigger_icon {
+  display: none !important;
+  padding-left: 20px !important;
+}
+
 .notion-toggle__content {
   padding: 0px 30px 20px 30px !important;
 }
