--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -29,9 +29,12 @@
     padding: 25px 70px 25px 0px !important;
 }
 
+.notion-toggle__trigger{
+    margin-right: 25px !important;
+}
+
 .notion-toggle__trigger_icon{
     display: none !important;
-    padding-left: 20px !important;
 }
 
 .notion-toggle__content{
