--- a/style/main.css
+++ b/style/main.css
@@ -235,9 +235,12 @@ h3.notion-heading {
   padding: 25px 70px 25px 0px !important;
 }
 
+.notion-toggle__trigger {
+  margin-right: 25px !important;
+}
+
 .notion-toggle__trigger_icon {
   display: none !important;
-  padding-left: 20px !important;
 }
 
 .notion-toggle__content {
