--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -9,6 +9,10 @@
     }
 }
 
+.notion-toggle-heading-3 > .notion-toggle__summary{
+    margin-top: 0px !important;
+}
+
 .notion-toggle__summary:before{
     position: absolute !important;
     right: 20px !important;
