--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -13,14 +13,14 @@
     margin-top: 0px !important;
 }
 
-.notion-toggle__summary:before{
+.notion-toggle__summary::before{
     position: absolute !important;
     right: 20px !important;
     opacity: 0.4 !important;
     content: "+" !important;
 }
 
-.notion-toggle[open]>summary:before{
+.notion-toggle[open]>summary::before{
     content: "-" !important;
 }
 
