--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -7,7 +7,7 @@
     --color-text-default: rgb(237, 237, 237) !important;
     --color-date-default: rgb(152, 144, 144) !important;
     --color-link-default: rgb(208, 106, 78) !important;
-    --color-hover-default: rgb(142, 230, 192) !important;
+    --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgb(208 106 78 / 10%) 98%) !important;
     --color-cta-background: rgb(237, 237, 237) !important;
     --color-cta-text: rgb(32, 32, 32) !important;
 }
