--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -102,7 +102,9 @@ tbody.notion-collection-table__body{
     border: 1px solid var(--color-border-default)!important;
     padding: 2rem !important;
     background: none !important;
+    box-shadow: var(--color-boxshadow-default) !important;
 }
+
 .notion-collection-card__cover{
     border-radius: 5px !important;
     flex: 0 0 225px !important;
