--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -102,8 +102,7 @@ tbody.notion-collection-table__body{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
     padding: 2rem !important;
-    /* background: none !important; */
-    background: var(--color-hover-default) !important;
+    background: none !important;
     box-shadow: var(--color-boxshadow-default) !important;
 }
 
