--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -165,6 +165,14 @@ tbody.notion-collection-table__body{
     }
 }
 
+::selection{
+    background: var(--color-hovershadow-default) !important;
+}
+
+html ::-webkit-scrollbar{
+
+}
+
 
 //media queries
 
@@ -172,7 +180,7 @@ tbody.notion-collection-table__body{
     tbody.notion-collection-table__body{
         flex-direction: column !important;
     }
-    
+
     .notion-collection-card{
         display:block !important;
     }
