--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -62,9 +62,9 @@
 
 //hamburger menu
 
-.notion-dropdown__menu-header, .notion-dropdown__option-icon, .notion-dropdown__button svg:first-of-type {
-/*     display: none !important; */
-}
+/* .notion-dropdown__menu-header, .notion-dropdown__option-icon, .notion-dropdown__button svg:first-of-type {
+        display: none !important; 
+} */
 
 .notion-dropdown{
     width: 100% !important;
