--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -169,9 +169,9 @@ tbody.notion-collection-table__body{
     background: var(--color-hovershadow-default) !important;
 }
 
-html ::-webkit-scrollbar{
+/* html ::-webkit-scrollbar{
 
-}
+} */
 
 
 //media queries
