--- a/style/main.css
+++ b/style/main.css
@@ -428,7 +428,8 @@ tbody.notion-collection-table__body {
 }
 
 ::selection {
-  background: var(--color-hovershadow-default) !important;
+  background: var(--color-link-default) !important;
+  opacity: 0.5 !important;
 }
 
 /* html ::-webkit-scrollbar{
