--- a/style/main.css
+++ b/style/main.css
@@ -432,9 +432,12 @@ tbody.notion-collection-table__body {
   opacity: 0.5 !important;
 }
 
-/* html ::-webkit-scrollbar{
+html ::-webkit-scrollbar {
+  width: 10px !important;
+  background: var(--color-bg-default);
+  border: none !important;
+}
 
-} */
 @media (max-width: 600px) {
   tbody.notion-collection-table__body {
     flex-direction: column !important;
