--- a/style/main.css
+++ b/style/main.css
@@ -432,10 +432,18 @@ tbody.notion-collection-table__body {
   opacity: 0.5 !important;
 }
 
-html ::-webkit-scrollbar {
+html::-webkit-scrollbar {
   width: 10px !important;
-  background: var(--color-bg-default);
+  background-color: var(--color-bg-default) !important;
   border: none !important;
+}
+html::-webkit-scrollbar-track {
+  background-color: transparent !important;
+  border-radius: 10px !important;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: rgb(65, 65, 65) !important;
+  border-radius: 10px !important;
 }
 
 @media (max-width: 600px) {
