--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,7 @@
   --color-cta-text: rgb(32, 32, 32) !important;
   --color-boxshadow-default: rgb(208 106 78 / 10%) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
   --color-hovershadow-default: rgba(229 144 74 / 20%) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
+  --scrollbar-thumb-color: rgba(110, 110, 110, 0.1) !important;
 }
 
 .theme-default body {
@@ -28,6 +29,7 @@
   --color-cta-text: rgb(237, 237, 237) !important;
   --color-boxshadow-default: rgb(208 106 78 / 16%) 0px 10px 36px 0px, rgb(208 106 78 / 6%) 0px 0px 0px 1px !important;
   --color-hovershadow-default: rgb(38 44 59 / 4%) 0px 5.6347px 10.0172px 0px, rgb(228 221 59 / 4%) 0px 10.0513px 17.869px 0px, rgb(38 44 59 / 5%) 0px 18.7999px 33.4221px 0px, rgb(208 106 78 / 7%) 0px 45px 80px 0px !important;
+  --scrollbar-thumb-color: rgba(158, 158, 158, 0.1) !important;
 }
 
 /*
@@ -432,18 +434,19 @@ tbody.notion-collection-table__body {
   opacity: 0.5 !important;
 }
 
-html::-webkit-scrollbar {
+html ::-webkit-scrollbar {
   width: 10px !important;
   background-color: var(--color-bg-default) !important;
   border: none !important;
 }
-html::-webkit-scrollbar-track {
+html ::-webkit-scrollbar-track {
   background-color: transparent !important;
   border-radius: 10px !important;
 }
-html::-webkit-scrollbar-thumb {
-  background-color: rgb(65, 65, 65) !important;
-  border-radius: 10px !important;
+html ::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-color) !important;
+  border-radius: 50px !important;
+  border: 4px solid transparent !important;
 }
 
 @media (max-width: 600px) {
