--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,6 +18,10 @@
     text-transform: uppercase !important;
 }
 
+.notion-image.page-width img{
+    border-radius: 5px !important;
+}
+
 //table
 
 thead.notion-collection-table__head{
