--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -158,6 +158,16 @@ tbody.notion-collection-table__body{
     margin: 16px 0 0 !important;
 
 }
+
+//small gallery
+.notion-collection-gallery.small{
+    grid-template-columns: repeat(3, 1fr) !important;
+    .notion-collection-card{
+        display: flex !important;
+        flex-direction: column !important;
+    }
+}
+
 //links
 .notion-semantic-string .link{
     border: none !important;
