--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,7 +182,7 @@ tbody.notion-collection-table__body{
 }
 
 //Notion Columns
-.notion-column:first-of-type[style] {
+.notion-column:first-of-type {
     width: calc((100% - 30px) * 1) * 0.26087 !important;
 }
 
