--- a/style/main.css
+++ b/style/main.css
@@ -446,13 +446,12 @@ tbody.notion-collection-table__body {
 }
 
 .notion-column:first-of-type {
-  width: 250px !important;
-  position: absolute !important;
+  width: calc((100% - 30px) * 0.375) !important;
 }
 
 .notion-column:nth-of-type(2) {
-  margin-left: 280px !important;
-  width: 100% !important;
+  margin-left: 50px !important;
+  width: 50% !important;
 }
 
 .notion-semantic-string .link {
