--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -184,6 +184,7 @@ tbody.notion-collection-table__body{
 //Notion Columns
 .notion-column-list{
     gap: 4rem !important;
+    flex-wrap: nowrap !important;
 }
 
 .notion-column:first-of-type {
