notion list and columns

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -22,7 +22,8 @@ h1.notion-heading{
 }
 
 h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
-    font-weight: 500!important;
+    font-weight: 400 !important;
+    line-height: 1 !important;
 }
 
 h2.notion-heading{
