--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,6 +182,14 @@ tbody.notion-collection-table__body{
 }
 
 //Notion Columns
+.notion-column-list{
+    gap: 2.5em !important;
+}
+
+.notion-column{
+    margin: 0px !important;
+}
+
 
 //links
 .notion-semantic-string .link{
