--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -190,6 +190,13 @@ tbody.notion-collection-table__body{
     margin: 0px !important;
 }
 
+//caption dash
+.caption-dash{
+    width: 5.2em !important;
+    height: 1px !important;
+    background-color: var(--color-text-default) !important;
+}
+
 
 //links
 .notion-semantic-string .link{
